MDEV-4226 [PATCH] "Unused variable" warnings in the tarball